Fix the shopping-cart-item-component-wrapper div bug related to its height on tablet

--- a/src/components/Modals/ShoppingCartModal/ShoppingCartModal.scss
+++ b/src/components/Modals/ShoppingCartModal/ShoppingCartModal.scss
@@ -113,24 +113,29 @@
 // Begin tablet media queries
 @media screen and (max-width: 834px) {
   .cart-modal-page-wrapper {
+    position: fixed;
     top: 0;
+
+    left: 50%;
+    transform: translate(-50%, -50%);
     @include flex(row);
     @include flexPosition(center, center);
     @include widthHeight(100vw, 1700px);
     z-index: 999;
+    // border: 4px solid blue;
   }
 
   .cart-wrapper {
     position: relative;
-    top: 38%;
+    top: 56%;
     align-items: center;
     @include widthHeight(100%, 100%);
     @include maxWidth(100%);
-    max-height: 65%;
+    max-height: fit-content;
     background-color: var(--Background);
     overflow-y: scroll;
     filter: drop-shadow(0px 0px 0px rgb(0 0 0 / 0));
-    // border: 2px solid red;
+    outline: 2px solid red;
 
     .top-cart-title-wrapper {
       position: sticky;
@@ -139,7 +144,7 @@
       @include flexPosition(flex-start, center);
       @include widthHeight(89.5%, fit-content);
       @include maxWidth(608px);
-      margin-bottom: 10px;
+      // margin-bottom: 10px;
 
       background-color: var(--Background);
       border-bottom: 1px solid var(--Grey-50);
@@ -153,11 +158,11 @@
 
     .shopping-cart-item-component-wrapper {
       @include flex(column);
-      @include flexPosition(center, center);
+      @include flexPosition(flex-start, center);
       @include widthHeight(100%, auto);
       // @include maxWidth(680px);
-      // max-height: 510px;
-      // overflow-y: scroll;
+      max-height: 530px;
+      overflow-y: scroll;
       margin: 0 auto;
       // border: 2px solid green;
       // border-bottom: 1px solid var(--Grey-50);
@@ -195,7 +200,7 @@
       @include flexPosition(flex-end, flex-end);
       @include widthHeight(89.5%, fit-content);
       // @include maxWidth(608px);
-      margin: 16px auto 0;
+      margin: 0px auto 0;
       padding-bottom: 38px;
       border-top: 1px solid var(--Grey-50);
       background-color: var(--Background);
